# emil

./: .clang-format  .clang-tidy  .cppcheck-suppressions  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.org  iwyu.imp
cmake/: FindGMP.cmake  FindGMPXX.cmake
doc/: spec.org
include/emil/: bigint.h  collections.h  cons.h  enum.h  evaluator.h  gc.h  interpreter.h  lexer.h  misc.h  parser.h  precedence.h  processor.h  reporter.h  runtime.h  source.h  strconvert.h  string.h  text_input.h  token.h  tree.h  treewalk.h  typed_ast.h  typer.h  types.h  value.h
src/: CMakeLists.txt  ast_printer.cc  bigint.cc  evaluator.cc  gc.cc  interpreter.cc  lexer.cc  parser.cc  repl.cc  reporter.cc  runtime.cc  single_pass_search.h  source.cc  strconvert.cc  string.cc  text_input.cc  treewalk.cc  typed_ast.cc  typer.cc  types.cc  value.cc
src/private/: ast_printer.h  single_pass_search.h
src/private-includes/private/: ast_printer.h  single_pass_search.h
test/: CMakeLists.txt  bigint_test.cc  collections_test.cc  gc_test.cc  processor_test.cc  source_test.cc  string_test.cc  test_util.cc  text_input_test.cc  types_test.cc
test/acceptance/: CMakeLists.txt
test/acceptance/evaluator/: CMakeLists.txt  driver.cc  identifier.expected  identifier.in  list.expected  list.in  literal.expected  literal.in  record.expected  record.in  sequenced.expected  sequenced.in  tuple.expected  tuple.in
test/acceptance/lexer/: CMakeLists.txt  README.org  char.expected  char.in  comment.expected  comment.in  driver.cc  fpliteral.expected  fpliteral.in  fstring.expected  fstring.in  identifier.expected  identifier.in  iliteral.expected  iliteral.in  keywords.expected  keywords.in  string.expected  string.in  syntax.expected  syntax.in
test/acceptance/parser/: CMakeLists.txt  application.expected  case.expected  case.in  driver.cc  dtype.expected  dtype.in  fn.expected  fn.in  fstring.expected  fstring.in  identifier.expected  identifier.in  if.expected  if.in  let.expected  let.in  list.expected  list.in  literal.expected  literal.in  operators.expected  operators.in  paren.expected  paren.in  record.expected  record.in  types.expected  types.in  val.expected  val.in
test/acceptance/typer/: CMakeLists.txt  application.expected  application.in  case.expected  case.in  driver.cc  dtype.expected  dtype.in  empty.expected  examples.expected  examples.in  fn.expected  fn.in  identifier.expected  identifier.in  if.expected  if.in  let.expected  let.in  list.expected  list.in  literal.expected  literal.in  record.expected  record.in  sequenced.expected  sequenced.in  tuple.expected  tuple.in  val.expected  val.in
test/testing/: test_util.h
tools/: CMakeLists.txt  genast.cc  genpowtab.py
